# homicx

./: CMakeLists.txt  README.md
dep/argtable3/: info.txt
dep/nlohmann/: info.txt
doc/: log.txt
html/: index.html  openapi.yaml
src/: config_response.h  crc.c  crc.h  device_response.h  event_dispatcher.h  main.cpp  response_helper.h  sequence.h  status_response.h
